--- a/client/src/app/achievers/[ReadMore]/readMore.css
+++ b/client/src/app/achievers/[ReadMore]/readMore.css
@@ -1,7 +1,7 @@
 .achiever-read-more-page {
     min-height: 100vh;
-    padding-top: 13vh;
-    background-color: #B8E8FC;
+    /* padding-top: 13vh; */
+    background-color: #11161A;
 }
 
 .selected-achiever-page-container {
@@ -26,13 +26,13 @@
     margin-top: 1.5em;
     padding: 0.2em;
     margin-left: 1em;
-    position: fixed;
-    overflow: hidden;
+    /* position: fixed; */
+    /* overflow: hidden; */
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background-color: #B8E8FC;
+    /* background-color: #B8E8FC; */
     background-color: #BCCEF8;
     border-radius: 0.5em;
 
@@ -125,21 +125,21 @@
     margin: 0 0.2em;
     padding: 0 0.5em;
     min-height: 80vh;
-    background-color: #B8E8FC;
+    /* background-color: #B8E8FC; */
 }
 
 .achiever-dynamic-section-container p{
     line-height: 1.3;
     letter-spacing: 0.7px;
-    color: #000;
+    color: #fff;
 }
 
 .fixed-inside-dynamic-achiever-before{
     width: 100%;
-    position: sticky;
-    top: 13vh;
+    /* position: sticky; */
+    /* top: 13vh; */
     padding: 1em;
-    background-color: #B8E8FC;
+    /* background-color: #B8E8FC; */
 }
 
 .fixed-inside-dynamic-achiever-after{
@@ -147,5 +147,5 @@
     position: sticky;
     bottom: 0;
     padding: 1em;
-    background-color: #B8E8FC;
+    /* background-color: #B8E8FC; */
 }
