--- a/client/src/app/developers/Developers.css
+++ b/client/src/app/developers/Developers.css
@@ -20,11 +20,13 @@
   font-family: "Montserrat", sans-serif;
 } */
 
-.container {
+.developer-page {
+  width: 100%;
+  min-height: 90vh;
   text-align: center;
 }
 
-.row {
+.developer-page .row {
   display: flex;
   flex-wrap: wrap;
   gap: 20px;
@@ -32,7 +34,7 @@
   margin: 0 -10px;
 }
 
-.card {
+.developer-page .card {
   background: #fff;
   padding: 30px;
   border-radius: var(--br);
@@ -42,22 +44,14 @@
   max-width: 300px;
 }
 
-.card:hover {
+.developer-page .card:hover {
   box-shadow: 0px 3px 10px 5px #e9e9e9;
 }
 
-.card img {
+.developer-page .card img {
   max-width: 100%;
   border-radius: 50%;
   border: 4px solid var(--bc, #000);
-}
-
-h1 {
-  margin: 20px 0;
-}
-
-h2 {
-  margin: 15px 0 5px;
 }
 
 .social-links,
